--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>LogIn-Page</title>
-    <link rel="stylesheet" href="indexStyle.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="loginBox">
